Fixed issue with comments under match. Started use store for match detail instead of service.

--- a/src/app/lazy-modules/sidebar-left/components/sidebar-left/sidebar-left.component.scss
+++ b/src/app/lazy-modules/sidebar-left/components/sidebar-left/sidebar-left.component.scss
@@ -5,10 +5,10 @@
 }
 
 .top {
-    left: 0;
+    left: 7%;
     position: fixed;
-    bottom: 10%;
+    bottom: 18%;
     height: 6%;
     text-align: center;
-    width: 25%;
+    width: 88px;
 }
