--- a/src/app/matches/pages/match-detail/match-detail.component.html
+++ b/src/app/matches/pages/match-detail/match-detail.component.html
@@ -1,63 +1,64 @@
-﻿<ng-container *ngIf="{ isInformer: isInformer$ | async } as data">
-    <div class="full-width" *ngIf="item">
+﻿<ng-container *ngIf="{ isInformer: isInformer$ | async,
+                        match: match$ | async } as data">
+    <div class="full-width" >
         <div *ngIf="data.isInformer" class="flex-space-between">
-            <button mat-raised-button color="warn" (click)="pin(item.id)">Закрепить на главной</button>
+            <button mat-raised-button color="warn" (click)="pin(data.match.id)">Закрепить на главной</button>
             <button mat-raised-button (click)="pin(0)">Открепить от главной</button>
             <button mat-raised-button [routerLink]="['./edit']">Изменить</button>
         </div>
         <div class="full-width text-center">
-            {{item.dateTime | customDate:false:true}}, {{item.typeName}}
+            {{data.match.dateTime | customDate:false:true}}, {{data.match.typeName}}
         </div>
         <div class="full-width text-center bottom10">
-            {{item.stadiumName}}, {{item.stadiumCity}}
+            {{data.match.stadiumName}}, {{data.match.stadiumCity}}
         </div>
         <div class="full-width flex-v-c flex-space-between">
             <div>
                 <div class="full-width text-center">
-                    <img [src]="item.homeClubLogo" [alt]="item.homeClubName" [title]="item.homeClubName" />
+                    <img [src]="data.match.homeClubLogo" [alt]="data.match.homeClubName" [title]="data.match.homeClubName" />
                 </div>
                 <div class="full-width text-center">
-                    <b class="font-size20" [textContent]="item.homeClubName"></b>
+                    <b class="font-size20" [textContent]="data.match.homeClubName"></b>
                 </div>
             </div>
             <div class="text-center">
-                <div class="full-width font-size40" *ngIf="item.scoreHome != null; else countDown;">
-                    <b class=""><span [textContent]="item.scoreHome"></span></b>
+                <div class="full-width font-size40" *ngIf="data.match.scoreHome != null; else countDown;">
+                    <b class=""><span [textContent]="data.match.scoreHome"></span></b>
                     <span class="padding5">:</span>
-                    <b class=""><span [textContent]="item.scoreAway"></span></b>
+                    <b class=""><span [textContent]="data.match.scoreAway"></span></b>
                     <b
-                        *ngIf="item.scorePenaltyHome || item.scorePenaltyAway">({{item.scorePenaltyHome}}-{{item.scorePenaltyAway}})</b>
+                        *ngIf="data.match.scorePenaltyHome || data.match.scorePenaltyAway">({{data.match.scorePenaltyHome}}-{{data.match.scorePenaltyAway}})</b>
                 </div>
                 <ng-template #countDown>
-                    <span [textContent]="countDown$ | async" class="color-gold color-back-maroon counter"></span>
+                    <span [textContent]="timeRemaining$ | async" class="color-gold color-back-maroon counter"></span>
                 </ng-template>
             </div>
 
             <div>
                 <div class="full-width text-center">
-                    <img [src]="item.awayClubLogo" [alt]="item.awayClubName" [title]="item.awayClubName" />
+                    <img [src]="data.match.awayClubLogo" [alt]="data.match.awayClubName" [title]="data.match.awayClubName" />
                 </div>
                 <div class="full-width text-center">
-                    <b class="font-size20" [textContent]="item.awayClubName"></b>
+                    <b class="font-size20" [textContent]="data.match.awayClubName"></b>
                 </div>
             </div>
         </div>
-        <mat-tab-group mat-stretch-tabs color="warn" [selectedIndex]="item.scoreHome != null ? 1 : 0">
-            <mat-tab label="Состав" isActive="item.scoreHome == null">
+        <mat-tab-group mat-stretch-tabs color="warn" [selectedIndex]="data.match.scoreHome != null ? 1 : 0">
+            <mat-tab label="Состав" isActive="data.match.scoreHome == null">
                 <ng-template matTabContent>
-                    <match-person-panel [matchId]="item.id" [isHome]="item.homeClubId === 1"></match-person-panel>
+                    <match-person-panel [matchId]="data.match.id" [isHome]="data.match.homeClubId === 1"></match-person-panel>
                 </ng-template>
             </mat-tab>
             <mat-tab label="События">
                 <ng-template matTabContent>
-                    <match-event-match-panel [matchId]="item.id" [seasonId]="item.seasonId"
-                        [isHome]="item.homeClubId === 1"></match-event-match-panel>
-                    <button mat-raised-button class="full-width" (click)="ngOnInit()">Обновить события матча</button>
+                    <match-event-match-panel [matchId]="data.match.id" [seasonId]="data.match.seasonId"
+                        [isHome]="data.match.homeClubId === 1"></match-event-match-panel>
+                    <!-- <button mat-raised-button class="full-width" (click)="ngOnInit()">Обновить события матча</button> -->
                 </ng-template>
             </mat-tab>
         </mat-tab-group>
         <div class="full-width top10">
-            <comment-section id="comments" [matchId]="item.id" [canCommentary]="true"></comment-section>
+            <comment-section id="comments" [matchId]="data.match.id" [canCommentary]="true"></comment-section>
         </div>
     </div>
 </ng-container>
