--- a/src/app/persons/pages/squad/squad.component.html
+++ b/src/app/persons/pages/squad/squad.component.html
@@ -12,11 +12,11 @@
                         <mat-card-header>
                             <mat-card-title>
                                 <b *ngIf="person.number">#<span [textContent]="person.number"></span></b>&nbsp;
-                                <span role="button" *ngIf="data.isInformer" [routerLink]="['/persons', person.id, 'edit']" [textContent]="person.russianName"></span>
-                                <span *ngIf="!data.isInformer" [textContent]="person.russianName"></span>
+                                <span role="button" *ngIf="data.isInformer" [routerLink]="['/persons', person.id, 'edit']" [textContent]="person.nickname || person.russianName"></span>
+                                <span *ngIf="!data.isInformer" [textContent]="person.nickname || person.russianName"></span>
                             </mat-card-title>
                         </mat-card-header>
-                        <img mat-card-image [src]="person.photo" loading="lazy" [alt]="person.russianName">
+                        <img mat-card-image [src]="person.photo" loading="lazy" [alt]="person.nickname || person.russianName">
                         <mat-card-content>
                             <p *ngIf="person.country"><span [textContent]="person.country"></span></p>&nbsp;
                             <p><span [textContent]="person.birthday | date"></span></p>
@@ -33,11 +33,11 @@
                         <mat-card-header>
                             <mat-card-title>
                                 <b *ngIf="person.number">#<span [textContent]="person.number"></span></b>&nbsp;
-                                <span role="button" *ngIf="data.isInformer" [routerLink]="['/persons', person.id, 'edit']" [textContent]="person.russianName"></span>
-                                <span *ngIf="!data.isInformer" [textContent]="person.russianName"></span>
+                                <span role="button" *ngIf="data.isInformer" [routerLink]="['/persons', person.id, 'edit']" [textContent]="person.nickname || person.russianName"></span>
+                                <span *ngIf="!data.isInformer" [textContent]="person.nickname || person.russianName"></span>
                             </mat-card-title>
                         </mat-card-header>
-                        <img mat-card-image [src]="person.photo" loading="lazy" [alt]="person.russianName">
+                        <img mat-card-image [src]="person.photo" loading="lazy" [alt]="person.nickname || person.russianName">
                         <mat-card-content>
                             <p *ngIf="person.country"><span [textContent]="person.country"></span></p>
                             <p><span [textContent]="person.birthday | date"></span></p>
@@ -54,11 +54,11 @@
                         <mat-card-header>
                             <mat-card-title>
                                 <b *ngIf="person.number">#<span [textContent]="person.number"></span></b>&nbsp;
-                                <span role="button" *ngIf="data.isInformer" [routerLink]="['/persons', person.id, 'edit']" [textContent]="person.russianName"></span>
-                                <span *ngIf="!data.isInformer" [textContent]="person.russianName"></span>
+                                <span role="button" *ngIf="data.isInformer" [routerLink]="['/persons', person.id, 'edit']" [textContent]="person.nickname || person.russianName"></span>
+                                <span *ngIf="!data.isInformer" [textContent]="person.nickname || person.russianName"></span>
                             </mat-card-title>
                         </mat-card-header>
-                        <img mat-card-image [src]="person.photo" loading="lazy" [alt]="person.russianName">
+                        <img mat-card-image [src]="person.photo" loading="lazy" [alt]="person.nickname || person.russianName">
                         <mat-card-content>
                             <p *ngIf="person.country"><span [textContent]="person.country"></span></p>
                             <p><span [textContent]="person.birthday | date"></span></p>
@@ -75,11 +75,11 @@
                         <mat-card-header>
                             <mat-card-title>
                                 <b *ngIf="person.number">#<span [textContent]="person.number"></span></b>&nbsp;
-                                <span role="button" *ngIf="data.isInformer" [routerLink]="['/persons', person.id, 'edit']" [textContent]="person.russianName"></span>
-                                <span *ngIf="!data.isInformer" [textContent]="person.russianName"></span>
+                                <span role="button" *ngIf="data.isInformer" [routerLink]="['/persons', person.id, 'edit']" [textContent]="person.nickname || person.russianName"></span>
+                                <span *ngIf="!data.isInformer" [textContent]="person.nickname || person.russianName"></span>
                             </mat-card-title>
                         </mat-card-header>
-                        <img mat-card-image [src]="person.photo" loading="lazy" [alt]="person.russianName">
+                        <img mat-card-image [src]="person.photo" loading="lazy" [alt]="person.nickname || person.russianName">
                         <mat-card-content>
                             <p *ngIf="person.country"><span [textContent]="person.country"></span></p>
                             <p><span [textContent]="person.birthday | date"></span></p>
