--- a/src/app/persons/shared/person-edit/person-edit.component.html
+++ b/src/app/persons/shared/person-edit/person-edit.component.html
@@ -6,6 +6,9 @@
         <input matInput placeholder="Фамилия на русском" formControlName="lastRussianName">
     </mat-form-field>
     <mat-form-field class="full-width">
+        <input matInput placeholder="Прозвище (Фабиньо, Роналдиньо и так далее)" formControlName="nickname">
+    </mat-form-field>
+    <mat-form-field class="full-width">
         <mat-select placeholder="Тип" formControlName="type">
             <mat-option *ngFor="let type of types" [value]="type.id" [textContent]="type.name">
             </mat-option>
