Improved signalR work with comments.

--- a/src/app/lazy-modules/navbar-menu/components/navbar-menu.component.html
+++ b/src/app/lazy-modules/navbar-menu/components/navbar-menu.component.html
@@ -65,7 +65,7 @@
     <div *ngIf="data.isNewsmaker || data.isAuthor || data.isInformer" class="menu-block">
         <a role="button" [routerLink]="['/admin']">Админ</a>
     </div>
-    <div class="menu-block">
+    <!-- <div class="menu-block">
         <a role="button" [routerLink]="['/wal']"><span class="turquose">Фан Движение</span></a>
-    </div>
+    </div> -->
 </ng-container>
