--- a/src/app/lazy-modules/sidebar-left/components/person-birthday/person-birthday.component.html
+++ b/src/app/lazy-modules/sidebar-left/components/person-birthday/person-birthday.component.html
@@ -5,15 +5,15 @@
         </mat-card-title>
     </mat-card-header>
     <mat-card-content class="center">
-        <img loading="lazy" [src]="items[currentPersonIndex].photo" class="photo"
+        <img loading="lazy" [src]="items[currentPersonIndex].photo" class="photo" *ngIf="items[currentPersonIndex].photo"
             [alt]="items[currentPersonIndex].russianName" [srcset]="items[currentPersonIndex].photo | img:[100]" />
     </mat-card-content>
     <div *ngIf="items.length > 1" class="flex-space-between">
         <button mat-button (click)="goToPrevious()">
-            <mat-icon>arrow_left</mat-icon>
+            <mat-icon>arrow_back</mat-icon>
         </button>
         <button mat-button (click)="goToNext()">
-            <mat-icon>arrow_right</mat-icon>
+            <mat-icon>arrow_forward</mat-icon>
         </button>
     </div>
 </mat-card>
