Disabled bottom ad.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
                 <p>&copy; 2021 - MyLFC.ru</p>
                 <a style="word-wrap: break-word" [routerLink]="['/cooperation']">Сотрудничество</a>
             </footer>
-            <div class="ad-container">
+            <!-- <div class="ad-container">
                 <div class="ad-close" (click)="onAdClose($event)">×</div>
                 <div *ngIf="data.mobile;else desktop">
                     <od [blockName]="'R-A-255349-5'"></od>
@@ -41,7 +41,7 @@
                     <od [blockName]="'R-A-255349-3'"></od>
                 </ng-template>
                 Реклама позволяет нам становиться лучше.
-            </div>
+            </div> -->
         </mat-sidenav-content>
 
         <mat-sidenav #sidenav mode="over" class="sidenav" (keydown.escape)="sidenav.close()" [fixedInViewport]="true"
