--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -100,20 +100,20 @@ navbar-menu ::ng-deep div {
     text-align: center;
 }
 
-.bottom {
-    margin-bottom: 50px;
-}
+// .bottom {
+//     margin-bottom: 50px;
+// }
 
-@media (min-width: 768px) {
-    .ad-container {
-        height: 90px;
-    }
+// @media (min-width: 768px) {
+//     .ad-container {
+//         height: 90px;
+//     }
 
-    .bottom {
-        margin-bottom: 100px;
-    }
+//     .bottom {
+//         margin-bottom: 100px;
+//     }
 
-    .ad-close {
-        bottom: 73%;
-    }
-}
+//     .ad-close {
+//         bottom: 73%;
+//     }
+// }
