--- a/src/app/admin/pages/admin-home/admin-home.component.html
+++ b/src/app/admin/pages/admin-home/admin-home.component.html
@@ -1,4 +1,5 @@
-﻿<ng-container *ngIf="{ isInformer: isInformer$ | async, isAdminAssistant: isAdminAssistant$ | async } as data">
+﻿<ng-container *ngIf="{ isInformer: isInformer$ | async,
+     isAdminAssistant: isAdminAssistant$ | async } as data">
     <div>
         <span *ngIf="data.isInformer">
             <a [routerLink]="['/matches']" mat-menu-item>Матчи</a>
@@ -32,6 +33,11 @@
             <button mat-raised-button color="primary"
              (click)="updateUsersNumbers()">Обновить счетчики у пользователей</button>
             <span>{{usersNumbers$ | async}}</span>
+        </div>
+        <div>
+            <button mat-raised-button color="primary"
+             (click)="updateCommentsVotes()">Обновить счетчики голосов у комментариев</button>
+            <span>{{commentsVotes$ | async}}</span>
         </div>
         <div>
             <input matInput #email type="email">
